se agrego la data a breña y magdalena y se modifico el color para los que no tienen link

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     // Config detectada automáticamente (puedes cambiarla)
     const CAMPO_NOMBRE = "DISTRITO";   // detectado: DISTRITO
     const CAMPO_LINK   = "link";   // detectado: link
+    const COLOR_SIN_LINK = '#dfe8f5';
   </script>
   <script src="./js/app.js"></script>
